Thu Mar 12 10:32:39 2015  Koichi Sasada  <ko1@atdot.net>

	* common.mk: remove unused dependency.

Thu Mar 12 08:20:14 2015  Koichi Sasada  <ko1@atdot.net>

	* load.c: removed unused header file "node.h".

	* method.h: ditto.

	* symbol.c: ditto.

Thu Mar 12 08:14:48 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c: RGENGC_CHECK_MODE should be 0.

Thu Mar 12 07:44:17 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h: use T_IMEMO to represent `struct MEMO' value.
	  memo->v1 and memo->v2 is WB protected values.
	  So use MEMO_V1/V2_SET() macros to set these values.
	  memo->u3 is ambiguous (sometimes a VALUE, sometimes an integer
	  value), so use gc_mark_maybe() in gc.c to mark it.

	  Rename NEW_MEMO() to MEMO_NEW().

	  Move MEMO_FOR and NEW_MEMO_FOF macros from node.h.

	  Export a rb_imemo_new() function for ext/ripper.

	* node.h: remove NODE_MEMO.

	* enum.c: catch up these change.

	* enumerator.c: ditto.

	* load.c: ditto.

	* ext/objspace/objspace.c (count_nodes): ditto.

	* gc.c (gc_mark_children): mark imemo_memo type.

	* parse.y (new_args_gen): use T_IMEMO.
	  (I'm not sure it is working correctly...)

Wed Mar 11 22:36:34 2015  Koichi Sasada  <ko1@atdot.net>

	* eval.c (frame_called_id): it should use vm_ifunc type.

	* eval.c (frame_func_id): ditto.

Wed Mar 11 22:27:05 2015  Koichi Sasada  <ko1@atdot.net>

	* node.h: remove NODE_IFUNC, NEW_IFUNC.

	* internal.h: use T_IMEMO for IFUNC.

	  rename `struct IFUNC' to `struct vm_ifunc' and move the definition
	  from vm_insnhelper.h. Add imemo_ifunc.

	* gc.c (gc_mark_children): mark imemo_ifunc type T_IMEMO object.

	* compile.c: catch up these changes.

	* proc.c: ditto.

	* vm_core.h (RUBY_VM_IFUNC_P): ditto.

	* vm_eval.c (rb_iterate): ditto.

	* vm_insnhelper.c: ditto.

	* ext/objspace/objspace.c: ditto.

Wed Mar 11 21:53:43 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h, eval_intern.h: move CREF accessors.

	  List IMEMO supported types in internal.h.
